# Rust_ProxyDll_Syscall

./: README.md
RustProxyDll_Syscall/: Assembly.lib  Cargo.toml
RustProxyDll_Syscall/src/: main.rs  shellcode.rs  types.rs
